<resources>
    <string name="app_name">Price Compare</string>
    <string name="no_network">No network Connection</string>
    <string name="no_data">No Data Found</string>
    <string name="try_again">Try again</string>
    <string name="load_error">\t\tSomething went wrong, \n Check your Internet Connection</string>
    <string name="search_hint"> Search… </string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Price Compare</string>
    <string name="nav_header_subtitle">user mail</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_login">Login</string>
    <string name="menu_saved">Saved</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>

    <string-array name="sort">
        <item>Low to High Price</item>
        <item>High to Low Price</item>
    </string-array>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_button">Login</string>
    <string name="hint_email">Enter your Email</string>
    <string name="hint_password">Enter your Password</string>
    <string name="signup">SignUp</string>
    <string name="login_error_message">Wrong email or password try again</string>
    <string name="hint_confirm_password">Confirm your password</string>
    <string name="password_dont_match">Passwords do not match</string>
    <string name="logOut">LogOut</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="or">OR</string>
    <string name="no_items_saved">No items saved</string>
</resources>
